新增组件